solved overflow in signupdetail

--- a/style.css
+++ b/style.css
@@ -715,7 +715,7 @@ font-family: 'Trispace', sans-serif;
     background-position: bottom right;
     background-repeat: no-repeat;
     flex-direction: column;
-    width: 99.97vw;
+    width: 98.93vw;
 }
 
 .gennext {
